--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <header>
         <div class="container">
             <h1>Tanahashi's Portfolio</h1>
-            <p class="last-updated">最終更新日：2025年7月11日</p>
+            <p class="last-updated">最終更新日：2025年7月18日</p>
         </div>
     </header>
 
@@ -365,12 +365,26 @@
                 <h3>DreamMayday</h3>
                 <div class="project-details">
                     <div class="project-media">
-                    BitSummit2025に向けて開発中です    
+                        <h4>スクリーンショット</h4>
+                        <div class="screenshots">
+                           <img src="Images/DreamMayday/33Y2pq.png" alt="IamMan Screenshot 1">
+                           <img src="Images/DreamMayday/beR923.png" alt="IamMan Screenshot 1">
+                           <img src="Images/DreamMayday/ckWmyt.png" alt="IamMan Screenshot 1">
+                        </div>
+                        <h4>プレイ動画</h4>
+                        <div class="video-container">
+                           <iframe src="https://www.youtube.com/watch?v=t4DQaSw2VJk" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>  
                     </div>
                     <div class="project-explain">
                       <p>
                         <strong>ゲーム説明</strong><br>
-                        BitSummitGameJam2025にて開発中
+                        <p>あなたたちは、夢を守る“ドリームサポーター”。 
+                        夢と現実、それぞれの視点から、住人たちの快適な眠りを守る2人の協力プレイ。 
+                        異変のサインを見逃さず、力を合わせて朝9時までに“ぐっすり快眠”を届けよう！</p>
+                        <p>夢側の君は眠る人の夢を見守り、異変があればすぐに相棒に知らせて対処してもらおう！</p>
+                        <p>現実側の君は、報告された異変の原因を現実世界から探し出し、素早く対処しよう！</p>
+                        <p>これは、2人だからこそ成立する “夢 × 現実” 協力コミュニケーションゲームです！</p>
                       </p>
                       <p>
                         <strong>開発期間</strong><br>
@@ -385,13 +399,23 @@
                         プログラマーリーダー
                       </p>
                       <p>
+                        <strong>担当箇所</strong><br>
+                        モック版作成、現実シーン作成
+                      </p>
+                      <p>
                         <strong>制作意図</strong><br>
                         チーム開発経験を積む
                       </p>
                       <ul>
                         <strong>こだわった点</strong>
-                        
+                        <li>・ソースコードに適宜コメントアウトをして、読みやすいコードを心掛けました。</li>
+                        <li>・オブジェクトの描画順を動的に変更することで、2Dでありながらも奥行きがあるように見せています。</li>
                       </ul>
+                      <p>
+                        <strong>リンク</strong><br>
+                        <a href="https://github.com/BSGJ2025-w-12/DreamMayday_Scripts" target="_blank" rel="noopener noreferrer">GitHub</a><br>
+                        <a href="https://bitsummit-gamejam.itch.io/dreammayday" target="_blank" rel="noopener noreferrer">itch.io</a>
+                      </p>
                     </div>
                 </div>
             </div>
@@ -466,6 +490,7 @@
             <ul>
                 <li><a href="https://github.com/tanahashi415" target="_blank" rel="noopener noreferrer">GitHub</a></li>
                 <li><a href="https://unityroom.com/users/5mblykan2p7xvrgi0h1t" target="_blank" rel="noopener noreferrer">unityroom</a></li>
+                <li><a href="https://x.com/awesome_yoshibo" target="_blank" rel="noopener noreferrer">X</a></li>
                 <li><a href="https://atcoder.jp/users/yoCmasa" target="_blank" rel="noopener noreferrer">Atcoder</a></li>
             </ul>
         </section>
