--- a/index.html
+++ b/index.html
@@ -367,13 +367,14 @@
                     <div class="project-media">
                         <h4>スクリーンショット</h4>
                         <div class="screenshots">
-                           <img src="Images/DreamMayday/33Y2pq.png" alt="IamMan Screenshot 1">
-                           <img src="Images/DreamMayday/beR923.png" alt="IamMan Screenshot 1">
-                           <img src="Images/DreamMayday/ckWmyt.png" alt="IamMan Screenshot 1">
+                            <img src="Images/DreamMayday/a24opT.png" alt="IamMan Screenshot 1">
+                            <img src="Images/DreamMayday/ckWmyt.png" alt="IamMan Screenshot 1">
+                            <img src="Images/DreamMayday/33Y2pq.png" alt="IamMan Screenshot 1">
+                            <img src="Images/DreamMayday/beR923.png" alt="IamMan Screenshot 1">
                         </div>
                         <h4>プレイ動画</h4>
                         <div class="video-container">
-                           <iframe src="https://www.youtube.com/watch?v=t4DQaSw2VJk" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                           <iframe width="560" height="315" src="https://www.youtube.com/embed/t4DQaSw2VJk?si=IP3HIFmahrjd52u8" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>  
                     </div>
                     <div class="project-explain">
@@ -410,6 +411,8 @@
                         <strong>こだわった点</strong>
                         <li>・ソースコードに適宜コメントアウトをして、読みやすいコードを心掛けました。</li>
                         <li>・オブジェクトの描画順を動的に変更することで、2Dでありながらも奥行きがあるように見せています。</li>
+                        <li>・部屋の割り当てをゲーム起動時に毎回ランダムに設定することで、何度でも楽しめるような工夫をしています。</li>
+                        <li>・タグやトリガー（非接触の当たり判定）を使い分けることで、複数の当たり判定を同時に処理できるようにしています。</li>
                       </ul>
                       <p>
                         <strong>リンク</strong><br>
