--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <header>
         <div class="container">
             <h1>Tanahashi's Portfolio</h1>
-            <p class="last-updated">最終更新日：2025年10月13日</p>
+            <p class="last-updated">最終更新日：2025年10月27日</p>
         </div>
     </header>
 
@@ -231,9 +231,13 @@
                             <img src="Images/DreamMayday/33Y2pq.png" alt="IamMan Screenshot 1">
                             <img src="Images/DreamMayday/beR923.png" alt="IamMan Screenshot 1">
                         </div>
-                        <h4>プレイ動画</h4>
+                        <h4>トレーラー</h4>
                         <div class="video-container">
                            <iframe width="560" height="315" src="https://www.youtube.com/embed/t4DQaSw2VJk?si=IP3HIFmahrjd52u8" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
+                        <h4>「にぶちゃんねる」様にて紹介されました！</h4>
+                        <div class="video-container">
+                           <iframe width="560" height="315" src="https://youtu.be/7K6taIWNTcE?si=eMO_eq9TeYrS_9bP&t=215" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>  
                     </div>
                     <div class="project-explain">
@@ -371,7 +375,7 @@
                           <li>・スコアに応じてエンディングが変化するマルチエンディングを実装しました。また、unityroomにてスコアランキングを実装しました。これにより、プレイヤーに目的意識を与え、ゲーム体験を向上させました。</li>
                           <li>・マウス感度やX軸反転、Y軸反転を好みに応じて設定できるようにしました。</li>
                           <li>・時間経過に応じて背景やパンケーキの色（焼き加減）が変化するようにしました。</li>
-                          <li>・厳密な衝突処理を実装すると上手くパンケーキをひっくり返す挙動が再現できず、また制作時間も限られていたため、あえて緩い衝突処理とすることでパンケーキをひっくり返す挙動を再現しました。</li>
+                          <!--<li>・厳密な衝突処理を実装すると上手くパンケーキをひっくり返す挙動が再現できず、また制作時間も限られていたため、あえて緩い衝突処理とすることでパンケーキをひっくり返す挙動を再現しました。</li>-->
                         </ul>
                         <p>
                           <strong>リンク</strong><br>
@@ -401,7 +405,7 @@
                         Google Chromeの"chrome://dino"をオマージュしたランゲームです。障害物をよけ続けてハイスコアを目指します。
                         本家との違いは、時間が経つと視界がぼやけて画面にモザイクがかかるという点です。
                         モザイクは瞬きをすることで元に戻ります。
-                        「瞬きをすると画面が見えなくなってしまうが、放置しても画面が見えずらい」というジレンマにどう対処していくか、というのがこのゲーム独自の面白さになっています。
+                        「瞬きをすると画面が見えなくなってしまうが、放置しても画面が見えづらい」というジレンマにどう対処していくか、というのがこのゲーム独自の面白さになっています。
                       </p>
                       <p>
                         <strong>開発期間</strong><br>
