--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         </div>
                         <h4>「にぶちゃんねる」様にて紹介されました！</h4>
                         <div class="video-container">
-                           <iframe width="560" height="315" src="https://youtu.be/7K6taIWNTcE?si=eMO_eq9TeYrS_9bP&t=215" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                           <iframe width="560" height="315" src="https://www.youtube.com/embed/7K6taIWNTcE?si=fJCetlP6NOrqap-F&amp;start=214" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>  
                     </div>
                     <div class="project-explain">
