--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <header>
         <div class="container">
             <h1>Tanahashi's Portfolio</h1>
-            <p class="last-updated">最終更新日：2025年10月27日</p>
+            <p class="last-updated">最終更新日：2025年12月7日</p>
         </div>
     </header>
 
@@ -197,11 +197,11 @@
 
     <div class="container">
         <section id="about-me">
-            <h2>About Me</h2>
+            <h1>About Me</h1>
             <!--<h3>自己紹介</h3>-->
             <p>27卒のゲームプログラマーを目指している大学院生です。</p>
             <p>普段からUnityでゲームを作って、学園祭で展示したり<a href="https://unityroom.com/users/5mblykan2p7xvrgi0h1t" target="_blank" rel="noopener noreferrer">unityroom</a>に投稿したりしています。大学院では生成AIの応用に関する研究をしています。<!--最近はプログラミングスキル向上のために<a href="https://atcoder.jp/users/yoCmasa" target="_blank" rel="noopener noreferrer">競技プログラミング</a>を始めました。-->趣味はゲームはもちろん、リアル脱出ゲームのような謎解きや、ボードゲームにも目がありません。</p>
-            <p>面白いゲームやロジックについて話すのが大好きなので、ぜひ皆さんと色々お話しできたら嬉しいです。</p>
+            <!--<p>面白いゲームやロジックについて話すのが大好きなので、ぜひ皆さんと色々お話しできたら嬉しいです。</p>-->
             <!--
             <h3>学歴</h3>
             <ul>
@@ -217,10 +217,10 @@
         <hr>
 
         <section id="projects">
-            <h2>Projects</h2>
+            <h1>Projects</h1>
 
             <div class="project">
-                <h3>DreamMayday</h3>
+                <h2>DreamMayday</h2>
                 <h4>（「<a href="https://bitsummit.org/" target="_blank" rel="noopener noreferrer">BitSummit the 13th</a>」で「BitSummit GAME JAM AWARD」を受賞しました！）</h4>
                 <div class="project-details">
                     <div class="project-media">
@@ -287,7 +287,7 @@
             </div>
 
             <div class="project">
-                <h3>一矢当千（いっしとうせん）</h3>
+                <h2>一矢当千（いっしとうせん）</h2>
                 <div class="project-details">
                     <div class="project-media">
                         <h4>スクリーンショット</h4>
@@ -338,7 +338,7 @@
             </div>
 
             <div class="project">
-                <h3>JAPANESE PANCAKES</h3>
+                <h2>JAPANESE PANCAKES</h2>
                 <div class="project-details">
                     <div class="project-media">
                         <h4>スクリーンショット</h4>
@@ -386,7 +386,7 @@
             </div>
 
             <div class="project">
-                <h3>Goggle.dino</h3>
+                <h2>Goggle.dino</h2>
                 <div class="project-details">
                      <div class="project-media">
                         <h4>スクリーンショット</h4>
@@ -402,7 +402,7 @@
                     <div class="project-explain">
                       <p>
                         <strong>ゲーム説明</strong><br>
-                        Google Chromeの"chrome://dino"をオマージュしたランゲームです。障害物をよけ続けてハイスコアを目指します。
+                        Google Chromeの"chrome://dino"をオマージュした2Dランゲームです。障害物をよけ続けてハイスコアを目指します。
                         本家との違いは、時間が経つと視界がぼやけて画面にモザイクがかかるという点です。
                         モザイクは瞬きをすることで元に戻ります。
                         「瞬きをすると画面が見えなくなってしまうが、放置しても画面が見えづらい」というジレンマにどう対処していくか、というのがこのゲーム独自の面白さになっています。
@@ -436,7 +436,7 @@
             </div>
 
             <div class="project">
-                <h3>アイアムマン</h3>
+                <h2>アイアムマン</h2>
                 <div class="project-details">
                     <div class="project-media">
                         <h4>スクリーンショット</h4>
@@ -485,7 +485,7 @@
         <hr>
 
         <section id="skills">
-            <h2>Skills</h2>
+            <h1>Skills</h1>
             <table class="skills-table">
                 <thead>
                     <tr>
@@ -498,47 +498,52 @@
                     <tr>
                         <td>C</td>
                         <td>1年</td>
-                        <td>配列、ポインタ、ファイル処理などの基礎的な知識。</td>
+                        <td>配列、ポインタ、ファイル処理などの基礎的な操作ができる。</td>
                     </tr>
                     <tr>
                         <td>C++</td>
-                        <td>6ヶ月</td>
-                        <td>Atcoderで勉強中。C問題が解けるかどうかのレベル。</td>
+                        <td>7ヶ月</td>
+                        <td>Atcoderで勉強中。茶色レート。C問題が大体解ける。</td>
                     </tr>
                     <tr>
                         <td>C#</td>
                         <td>3年</td>
-                        <td>Unityで使用。アルゴリズム関連は初心者レベル。UnityEngineを用いた処理は中～上級者レベル。</td>
+                        <td>Unityで使用。アルゴリズム関連は初心者レベル。MonoBehaviourを用いた処理は中級者レベル。</td>
                     </tr>
                     <tr>
                         <td>Python</td>
                         <td>2年</td>
-                        <td>機械学習やLLMのファインチューニング、データ処理など。</td>
+                        <td>機械学習やデータ処理などができる。リファレンスを参照しながら任意のプログラムを実装できる。</td>
                     </tr>
                     <tr>
                         <td>Linux</td>
                         <td>1年</td>
-                        <td>ファイル・ディレクトリ操作などの基本的な知識。</td>
+                        <td>シェルスクリプトからプログラムを動かすことができる。</td>
                     </tr>
                     <tr>
                         <td>Git</td>
                         <td>1年</td>
-                        <td>GitHubを用いたチーム開発経験、基本的なブランチ操作など。</td>
+                        <td>Gitを用いたチーム開発経験あり。基本的なブランチ操作などができる。</td>
                     </tr>
                     <tr>
                         <td>Docker</td>
                         <td>3ヶ月</td>
-                        <td>Dockerfileからのイメージ作成、コンテナ作成など。</td>
+                        <td>Dockerfileからのイメージ作成、コンテナ作成などができる。</td>
                     </tr>
                     <tr>
                         <td>Unity</td>
                         <td>3年</td>
-                        <td>2D/3Dゲーム開発経験。チーム開発経験。</td>
+                        <td>2D/3Dゲーム開発経験あり。チーム開発経験あり。基本的な仕様が実装できる。</td>
                     </tr>
                     <tr>
                         <td>Blender</td>
                         <td>1週間</td>
-                        <td>ゲームの3Dモデルを制作する際に使用。</td>
+                        <td>簡単な3Dモデルを作ることができる。</td>
+                    </tr>
+                    <tr>
+                        <td>Live2D</td>
+                        <td>1週間</td>
+                        <td>メッシュ割りと表情遷移が実装できる。</td>
                     </tr>
                 </tbody>
             </table>
@@ -547,7 +552,7 @@
         <hr>
 
         <section id="links">
-            <h2>Links</h2>
+            <h1>Links</h1>
             <ul>
                 <li><a href="https://github.com/tanahashi415" target="_blank" rel="noopener noreferrer">GitHub</a></li>
                 <li><a href="https://unityroom.com/users/5mblykan2p7xvrgi0h1t" target="_blank" rel="noopener noreferrer">unityroom</a></li>
@@ -559,7 +564,7 @@
         <hr>
 
         <section id="contact-me">
-            <h2>Contact Me</h2>
+            <h1>Contact Me</h1>
             <p>以下のメールアドレスまでご連絡ください。</p>
             <p>Gmail: yoshii44games@</p>
         </section>
