動画が自動再生される問題を修正

--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
             border-radius: 5px;
             background-color: #000;
         }
-        .video-container iframe {
+        .video-container iframe,
+        .video-container video {
             position: absolute;
             top: 0;
             left: 0;
@@ -194,7 +195,7 @@
     <header>
         <div class="container">
             <h1>Tanahashi's Portfolio</h1>
-            <p class="last-updated">最終更新日：2026年1月18日</p>
+            <p class="last-updated">最終更新日：2026年1月19日</p>
         </div>
     </header>
 
@@ -251,7 +252,10 @@
                         </div>
                         <h4>プレイ動画</h4>
                         <div class="video-container">
-                            <iframe src="Movies/GROG.mp4" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <video controls width="100%">
+                                <source src="Movies/GROG.mp4" type="video/mp4">
+                                ご使用のブラウザは動画再生に対応していません。
+                            </video>
                         </div>
                     </div>
                     <div class="project-explain">
@@ -311,7 +315,8 @@
                         <div class="video-container">
                            <iframe width="560" height="315" src="https://www.youtube.com/embed/t4DQaSw2VJk?si=IP3HIFmahrjd52u8" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
-                        <h4>「にぶちゃんねる」様にて紹介されました！</h4>
+                        <br>
+                        <h4>「にぶちゃんねる」様にて紹介されました！<br>この動画を見れば、展示の様子やゲームの雰囲気が感じられると思います！</h4>
                         <div class="video-container">
                            <iframe width="560" height="315" src="https://www.youtube.com/embed/7K6taIWNTcE?si=fJCetlP6NOrqap-F&amp;start=214" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>  
@@ -375,7 +380,10 @@
                         </div>
                         <h4>プレイ動画</h4>
                         <div class="video-container">
-                           <iframe src="Movies/GreatArcher.mp4" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                           <video controls width="100%">
+                                <source src="Movies/GreatArcher.mp4" type="video/mp4">
+                                ご使用のブラウザは動画再生に対応していません。
+                            </video>
                         </div>
                     </div>
                     <div class="project-explain">
@@ -427,7 +435,10 @@
                         </div>
                         <h4>プレイ動画</h4>
                         <div class="video-container">
-                           <iframe src="Movies/Goggle.dino.mp4" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                           <video controls width="100%">
+                                <source src="Movies/Goggle.dino.mp4" type="video/mp4">
+                                ご使用のブラウザは動画再生に対応していません。
+                            </video>
                         </div>
                     </div>
                     <div class="project-explain">
@@ -454,7 +465,7 @@
                         <strong>こだわった点</strong>
                         <li>・操作やルールが複雑なため、チュートリアルを工夫しました。具体的には、操作やゲームルール、画面UIを段階的に一つずつ説明していくことで、理解しやすいチュートリアルを心掛けました。</li>
                         <li>・ゲームが上手い人だとモザイクがかかった状態でも簡単にプレイできてしまうということを考慮して、モザイクがかかった状態だとスコア倍率に補正をかけるようにし、瞬きをする意味を持たせました。これにより意図したゲーム性になったと考えています。</li>
-                        <li>・プレイしてくれた友人から「目がチカチカする」という意見を頂いたので、瞬きの画面の色を黒からグレーへと変更することで、プレイヤーへの負担を軽減しました。</li>
+                        <!--<li>・プレイしてくれた友人から「目がチカチカする」という意見を頂いたので、瞬きの画面の色を黒からグレーへと変更することで、プレイヤーへの負担を軽減しました。</li>-->
                         <li>・unityroomのランキングをハイスコアランキングと走行距離ランキングの2つを用意することによって、「ハイスコアを狙うか、堅実に距離を稼ぐか」という戦略性が生まれ、ゲームプレイの奥深さを実現しました。</li>
                         <li>・当たり判定を実際の大きさよりわずかに小さくし、プレイヤーに理不尽さを感じさせない工夫をしました。</li>
                       </ul>
@@ -479,7 +490,10 @@
                         </div>
                         <h4>プレイ動画</h4>
                         <div class="video-container">
-                            <iframe src="Movies/JapanesePancakes.mp4" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <video controls width="100%">
+                                <source src="Movies/JapanesePancakes.mp4" type="video/mp4">
+                                ご使用のブラウザは動画再生に対応していません。
+                            </video>
                         </div>
                     </div>
                     <div class="project-explain">
@@ -528,7 +542,10 @@
                         </div>
                         <h4>プレイ動画</h4>
                         <div class="video-container">
-                           <iframe src="Movies/IamMan.mp4" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                           <video controls width="100%">
+                                <source src="Movies/IamMan.mp4" type="video/mp4">
+                                ご使用のブラウザは動画再生に対応していません。
+                            </video>
                         </div>
                     </div>
                     <div class="project-explain">
