GitHubへのリンクを追加

--- a/index.html
+++ b/index.html
@@ -290,8 +290,9 @@
                       </ul>
                       <p>
                         <strong>リンク</strong><br>
+                        <a href="https://github.com/tanahashi415/GROG_Scripts" target="_blank" rel="noopener noreferrer">GitHub</a><br>
                         <a href="https://drive.google.com/drive/folders/1UVgaU7ow26G74mniabvwtZK-2I_3Ok30?usp=drive_link" target="_blank" rel="noopener noreferrer">各種資料</a><br>
-                        <a href="https://note.com/preview/naa128b1a56e6?prev_access_key=7e0e778607d8c4beedd432ba603ff4fe" target="_blank" rel="noopener noreferrer">開発ノート</a><br>
+                        <a href="https://note.com/preview/naa128b1a56e6?prev_access_key=7e0e778607d8c4beedd432ba603ff4fe" target="_blank" rel="noopener noreferrer">開発ノート</a>
                       </p>
                     </div>
                 </div>
@@ -358,7 +359,7 @@
                       </ul>
                       <p>
                         <strong>リンク</strong><br>
-                        <a href="https://github.com/BSGJ2025-w-12/DreamMayday_Scripts" target="_blank" rel="noopener noreferrer">GitHub</a>（担当箇所はRealフォルダ内）<br>
+                        <a href="https://github.com/BSGJ2025-w-12/DreamMayday_Scripts/tree/master/Assets/Scripts/Real" target="_blank" rel="noopener noreferrer">GitHub</a>（担当箇所はRealフォルダ内）<br>
                         <a href="https://bitsummit-gamejam.itch.io/dreammayday" target="_blank" rel="noopener noreferrer">itch.io</a>
                       </p>
                     </div>
@@ -415,7 +416,7 @@
                       </ul>
                       <p>
                         <strong>リンク</strong><br>
-                        <a href="https://github.com/tanahashi415/Great-Archer" target="_blank" rel="noopener noreferrer">GitHub</a><br>
+                        <a href="https://github.com/tanahashi415/Great-Archer/tree/scripts_only" target="_blank" rel="noopener noreferrer">GitHub</a><br>
                         <a href="https://unityroom.com/games/great-archer" target="_blank" rel="noopener noreferrer">unityroom</a>
                       </p>
                     </div>
@@ -471,6 +472,7 @@
                       </ul>
                       <p>
                         <strong>リンク</strong><br>
+                        <a href="https://github.com/tanahashi415/Goggle.dino/tree/scripts_only" target="_blank" rel="noopener noreferrer">GitHub</a><br>
                         <a href="https://unityroom.com/games/goggle_dino" target="_blank" rel="noopener noreferrer">unityroom</a>
                       </p>
                     </div>
@@ -524,6 +526,7 @@
                         </ul>
                         <p>
                           <strong>リンク</strong><br>
+                          <a href="https://github.com/tanahashi415/Japanese-Pancakes/tree/scripts_only" target="_blank" rel="noopener noreferrer">GitHub</a><br>
                           <a href="https://unityroom.com/games/japanese_pancakes" target="_blank" rel="noopener noreferrer">unityroom</a>
                         </p>
                     </div>
